--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
 			<groupId>io.projectreactor.netty</groupId>
 			<artifactId>reactor-netty</artifactId>
 		</dependency>
+		<!--  Gson: Java to JSON conversion -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.9.1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
